--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <title>My FIrst Javascript Page</title>
+    
   </head>
   
   <body>
+  <!-- rest of document html goes here -->
   
+  <!-- let's put our javascript link down here so all the html can load first -->
+  <script src="./scripts/myjavascript.js"></script>
   </body>
 </html>
