--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
   <head>
-    <title>My FIrst Javascript Page</title>
+    <title>My First Javascript Page</title>
     
   </head>
   
@@ -10,5 +10,8 @@
   
   <!-- let's put our javascript link down here so all the html can load first -->
   <script src="./scripts/myjavascript.js"></script>
+  <script>
+    console.log("this is my first embedded script!");
+  </script>
   </body>
 </html>
